updated to include dataset download from kaggle

--- a/proiect.ipynb
+++ b/proiect.ipynb
@@ -18,6 +18,57 @@
    "execution_count": 20
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-20T20:16:43.488753Z",
+     "start_time": "2025-12-20T20:11:47.471469Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import os\n",
+    "import kagglehub\n",
+    "\n",
+    "target_folder = \"./dataset\"\n",
+    "os.makedirs(target_folder, exist_ok=True) \n",
+    "os.environ[\"KAGGLEHUB_CACHE\"] = \"./dataset\"\n",
+    "\n",
+    "path = kagglehub.dataset_download(\"netflix-inc/netflix-prize-data\")"
+   ],
+   "id": "610eb0c7a0dbf9ed",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading from https://www.kaggle.com/api/v1/datasets/download/netflix-inc/netflix-prize-data?dataset_version_number=2...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 683M/683M [04:45<00:00, 2.50MB/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting files...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 6
+  },
+  {
    "metadata": {},
    "cell_type": "markdown",
    "source": "for movie_titles csv file",
@@ -32,8 +83,9 @@
    },
    "cell_type": "code",
    "source": [
+    "folder_path = \"./dataset/datasets/netflix-inc/netflix-prize-data/versions/2\"\n",
     "rows = []\n",
-    "with open(f'dataset/movie_titles.csv', 'r') as file:\n",
+    "with open(f'{folder_path}/movie_titles.csv', 'r') as file:\n",
     "    for line in file:\n",
     "        line_items = [item.strip() for item in line.split(\",\")]\n",
     "        \n",
@@ -499,7 +551,7 @@
     }
    },
    "cell_type": "code",
-   "source": "df.to_parquet(\"dataset/movie_titles.parquet\", engine=\"fastparquet\", index=False)",
+   "source": "df.to_parquet(f\"{folder_path}/movie_titles.parquet\", engine=\"fastparquet\", index=False)",
    "id": "93a3865fde212eaf",
    "outputs": [],
    "execution_count": 39
@@ -514,7 +566,7 @@
    "cell_type": "code",
    "source": [
     "# double checking that we re all right\n",
-    "df = pd.read_parquet(\"dataset/movie_titles.parquet\", engine=\"fastparquet\")\n",
+    "df = pd.read_parquet(f\"{folder_path}/movie_titles.parquet\", engine=\"fastparquet\")\n",
     "df.head()"
    ],
    "id": "22198c4140afa778",
@@ -613,7 +665,7 @@
    "source": [
     "rows = []\n",
     "for i in range(1,5):\n",
-    "    with open(f'dataset/combined_data_{i}.txt', 'r') as file:\n",
+    "    with open(f'{folder_path}/combined_data_{i}.txt', 'r') as file:\n",
     "        for line in file:\n",
     "            line = line.strip()\n",
     "            match = re.match(r\"^(\\d+):$\", line)\n",
@@ -920,7 +972,7 @@
     }
    },
    "cell_type": "code",
-   "source": "df.to_parquet(\"dataset/data.parquet\", engine=\"fastparquet\", index=False)",
+   "source": "df.to_parquet(f\"{folder_path}/data.parquet\", engine=\"fastparquet\", index=False)",
    "id": "d61ce7dab808a48e",
    "outputs": [],
    "execution_count": 17
