fix for date in data.parquet

--- a/proiect.ipynb
+++ b/proiect.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-12-20T16:59:05.127010Z",
-     "start_time": "2025-12-20T16:59:04.749623Z"
+     "end_time": "2026-01-11T17:49:20.542717Z",
+     "start_time": "2026-01-11T17:49:19.728222Z"
     }
    },
    "source": [
@@ -15,13 +15,29 @@
     "import re"
    ],
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-20T20:16:43.488753Z",
-     "start_time": "2025-12-20T20:11:47.471469Z"
+     "end_time": "2026-01-11T17:57:00.078141Z",
+     "start_time": "2026-01-11T17:57:00.074259Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import pyarrow as pa\n",
+    "import pyarrow.parquet as pq"
+   ],
+   "id": "bc732a8620ca276c",
+   "outputs": [],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-11T17:49:32.441595Z",
+     "start_time": "2026-01-11T17:49:31.159335Z"
     }
    },
    "cell_type": "code",
@@ -41,32 +57,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading from https://www.kaggle.com/api/v1/datasets/download/netflix-inc/netflix-prize-data?dataset_version_number=2...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 683M/683M [04:45<00:00, 2.50MB/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting files...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.13), please consider upgrading to the latest version (0.4.0).\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -77,8 +72,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T20:30:33.450252Z",
-     "start_time": "2025-12-19T20:30:33.417182Z"
+     "end_time": "2026-01-11T15:44:16.172410Z",
+     "start_time": "2026-01-11T15:44:16.131220Z"
     }
    },
    "cell_type": "code",
@@ -98,13 +93,13 @@
    ],
    "id": "9926a3a32623d03",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T20:31:57.695356Z",
-     "start_time": "2025-12-19T20:31:57.665921Z"
+     "end_time": "2026-01-11T15:44:19.005054Z",
+     "start_time": "2026-01-11T15:44:18.949777Z"
     }
    },
    "cell_type": "code",
@@ -174,18 +169,18 @@
        "</div>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 17
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T20:32:06.748339Z",
-     "start_time": "2025-12-19T20:32:06.740852Z"
+     "end_time": "2026-01-11T15:44:24.538722Z",
+     "start_time": "2026-01-11T15:44:24.514828Z"
     }
    },
    "cell_type": "code",
@@ -262,18 +257,18 @@
        "</div>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 18
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T20:38:26.698992Z",
-     "start_time": "2025-12-19T20:38:26.689245Z"
+     "end_time": "2026-01-11T15:44:26.087353Z",
+     "start_time": "2026-01-11T15:44:26.066313Z"
     }
    },
    "cell_type": "code",
@@ -297,13 +292,13 @@
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T20:39:37.210560Z",
-     "start_time": "2025-12-19T20:39:37.202812Z"
+     "end_time": "2026-01-11T15:44:27.475506Z",
+     "start_time": "2026-01-11T15:44:27.459328Z"
     }
    },
    "cell_type": "code",
@@ -394,18 +389,18 @@
        "</div>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 23
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T20:40:04.696533Z",
-     "start_time": "2025-12-19T20:40:04.689093Z"
+     "end_time": "2026-01-11T15:44:28.980053Z",
+     "start_time": "2026-01-11T15:44:28.960197Z"
     }
    },
    "cell_type": "code",
@@ -449,18 +444,18 @@
        "</div>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 24
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T20:41:27.037525Z",
-     "start_time": "2025-12-19T20:41:27.031451Z"
+     "end_time": "2026-01-11T15:44:30.516194Z",
+     "start_time": "2026-01-11T15:44:30.504985Z"
     }
    },
    "cell_type": "code",
@@ -470,13 +465,13 @@
    ],
    "id": "d580d4263ddf179a",
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T20:41:36.602261Z",
-     "start_time": "2025-12-19T20:41:36.597784Z"
+     "end_time": "2026-01-11T15:44:33.024612Z",
+     "start_time": "2026-01-11T15:44:32.986183Z"
     }
    },
    "cell_type": "code",
@@ -489,18 +484,18 @@
        "(17763, 3)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 27
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T20:42:40.662518Z",
-     "start_time": "2025-12-19T20:42:40.652116Z"
+     "end_time": "2026-01-11T15:44:34.711908Z",
+     "start_time": "2026-01-11T15:44:34.695889Z"
     }
    },
    "cell_type": "code",
@@ -511,13 +506,13 @@
    ],
    "id": "238b1d1539445522",
    "outputs": [],
-   "execution_count": 29
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T20:42:51.691240Z",
-     "start_time": "2025-12-19T20:42:51.682026Z"
+     "end_time": "2026-01-11T15:44:36.011863Z",
+     "start_time": "2026-01-11T15:44:35.994820Z"
     }
    },
    "cell_type": "code",
@@ -541,26 +536,26 @@
      ]
     }
    ],
-   "execution_count": 30
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T20:47:47.068540Z",
-     "start_time": "2025-12-19T20:47:46.530111Z"
+     "end_time": "2026-01-11T15:44:37.698787Z",
+     "start_time": "2026-01-11T15:44:37.477312Z"
     }
    },
    "cell_type": "code",
    "source": "df.to_parquet(f\"{folder_path}/movie_titles.parquet\", engine=\"fastparquet\", index=False)",
    "id": "93a3865fde212eaf",
    "outputs": [],
-   "execution_count": 39
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-19T20:49:08.455787Z",
-     "start_time": "2025-12-19T20:49:08.441470Z"
+     "end_time": "2026-01-11T15:45:33.572076Z",
+     "start_time": "2026-01-11T15:45:33.556982Z"
     }
    },
    "cell_type": "code",
@@ -641,12 +636,12 @@
        "</div>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 40
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -657,8 +652,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-20T16:29:17.099929Z",
-     "start_time": "2025-12-20T16:07:00.996343Z"
+     "end_time": "2026-01-11T15:54:13.285046Z",
+     "start_time": "2026-01-11T15:45:36.324236Z"
     }
    },
    "cell_type": "code",
@@ -680,13 +675,13 @@
    ],
    "id": "cce3ae802563dce2",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-20T16:37:10.026319Z",
-     "start_time": "2025-12-20T16:37:09.972191Z"
+     "end_time": "2026-01-11T15:59:20.092696Z",
+     "start_time": "2026-01-11T15:59:20.059140Z"
     }
    },
    "cell_type": "code",
@@ -769,18 +764,18 @@
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-20T16:37:20.275313Z",
-     "start_time": "2025-12-20T16:37:20.207316Z"
+     "end_time": "2026-01-11T15:59:21.822440Z",
+     "start_time": "2026-01-11T15:59:21.729917Z"
     }
    },
    "cell_type": "code",
@@ -805,13 +800,13 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-20T16:43:24.523891Z",
-     "start_time": "2025-12-20T16:41:21.581591Z"
+     "end_time": "2026-01-11T16:01:03.311612Z",
+     "start_time": "2026-01-11T15:59:23.118864Z"
     }
    },
    "cell_type": "code",
@@ -828,18 +823,18 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-20T16:45:39.120762Z",
-     "start_time": "2025-12-20T16:43:30.441502Z"
+     "end_time": "2026-01-11T16:03:02.421687Z",
+     "start_time": "2026-01-11T16:01:21.800773Z"
     }
    },
    "cell_type": "code",
@@ -856,18 +851,18 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-20T16:51:53.053244Z",
-     "start_time": "2025-12-20T16:45:44.235901Z"
+     "end_time": "2026-01-11T16:07:21.483348Z",
+     "start_time": "2026-01-11T16:03:02.434347Z"
     }
    },
    "cell_type": "code",
@@ -879,13 +874,13 @@
    ],
    "id": "80e62b253f8d98af",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-20T16:51:58.383164Z",
-     "start_time": "2025-12-20T16:51:57.275257Z"
+     "end_time": "2026-01-11T16:07:22.224766Z",
+     "start_time": "2026-01-11T16:07:21.503360Z"
     }
    },
    "cell_type": "code",
@@ -902,18 +897,18 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-20T16:52:24.584487Z",
-     "start_time": "2025-12-20T16:52:24.576243Z"
+     "end_time": "2026-01-11T16:07:22.252959Z",
+     "start_time": "2026-01-11T16:07:22.232823Z"
     }
    },
    "cell_type": "code",
@@ -926,18 +921,18 @@
        "(100480507, 4)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-20T16:55:01.807733Z",
-     "start_time": "2025-12-20T16:55:01.743881Z"
+     "end_time": "2026-01-11T16:07:22.375124Z",
+     "start_time": "2026-01-11T16:07:22.256331Z"
     }
    },
    "cell_type": "code",
@@ -962,20 +957,177 @@
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-20T16:56:25.815197Z",
-     "start_time": "2025-12-20T16:56:14.879415Z"
+     "end_time": "2026-01-11T16:07:45.468937Z",
+     "start_time": "2026-01-11T16:07:22.383599Z"
     }
    },
    "cell_type": "code",
    "source": "df.to_parquet(f\"{folder_path}/data.parquet\", engine=\"fastparquet\", index=False)",
    "id": "d61ce7dab808a48e",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 25
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-11T18:30:46.566978Z",
+     "start_time": "2026-01-11T18:30:40.958605Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "df = pd.read_parquet(f\"{folder_path}/data.parquet\", engine=\"fastparquet\")\n",
+    "df.head()"
+   ],
+   "id": "8227fffff9d05bf7",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   movie_id  customer_id  rating       date\n",
+       "0         1      1488844       3 2005-09-06\n",
+       "1         1       822109       5 2005-05-13\n",
+       "2         1       885013       4 2005-10-19\n",
+       "3         1        30878       4 2005-12-26\n",
+       "4         1       823519       3 2004-05-03"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1488844</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2005-09-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>822109</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2005-05-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>885013</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2005-10-19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>30878</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2005-12-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>823519</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2004-05-03</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-11T18:31:19.626552Z",
+     "start_time": "2026-01-11T18:30:58.061239Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df['date'] = pd.to_datetime(df['date']).dt.date",
+   "id": "631af9a1cba6cf0d",
+   "outputs": [],
+   "execution_count": 20
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-11T18:31:21.073749Z",
+     "start_time": "2026-01-11T18:31:21.064199Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(df.head())",
+   "id": "95bd15ba77ead674",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   movie_id  customer_id  rating        date\n",
+      "0         1      1488844       3  2005-09-06\n",
+      "1         1       822109       5  2005-05-13\n",
+      "2         1       885013       4  2005-10-19\n",
+      "3         1        30878       4  2005-12-26\n",
+      "4         1       823519       3  2004-05-03\n"
+     ]
+    }
+   ],
+   "execution_count": 21
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-11T18:32:04.788102Z",
+     "start_time": "2026-01-11T18:31:35.953153Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "pq.write_table(pa.Table.from_pandas(df), f\"{folder_path}/data_fixed.parquet\")",
+   "id": "f3e52577965c78c4",
+   "outputs": [],
+   "execution_count": 22
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "1f819e2017d558e9"
   }
  ],
  "metadata": {
